# wayfinder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-packs.ts  build.js  module.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  test.yml
languages/: en.json  pl.json  pt-BR.json
lib/: package.mjs
packs/src/wayfinder-macros/: export-fog-exploration.json
rs/: lib.rs  utils.rs
rs/enums/: grid.rs  mod.rs  region_visibility.rs  token_shape_type.rs  wall_direction.rs  wall_movement_type.rs  wall_sense_type.rs
rs/exports/: fog.rs  mod.rs  regions.rs  walls.rs  wayfinder.rs
rs/grids/: gridless_grid.rs  hexagonal_grid.rs  mod.rs  square_grid.rs
rs/modules/: geometry.rs  math.rs  mod.rs  number.rs
rs/nodes/: gridless_node.rs  hexagonal_node.rs  mod.rs  square_node.rs
rs/traits/: astar.rs  base_grid.rs  js_deserialize.rs  js_helper.rs  js_serialize.rs  match.rs  mod.rs  node.rs  skip_last.rs  token_shape.rs
rs/types/: gl_texture.rs  grid_measure_path_result.rs  grid_offset.rs  hexagonal_grid_cube.rs  mod.rs  point.rs  ray.rs  region.rs  token_document.rs  token_find_movement_path_waypoint.rs  token_movement_waypoint.rs  token_shape_data.rs
scripts/: const.js  keybindings.js  module.js  ruler.js  settings.js  util.js
src/: index.ts
ts/: index.ts
wasm/: pf2e-astar.js  pf2e-astar_bg.wasm
wayfinder-crate/: Cargo.toml  rustfmt.toml
wayfinder-crate/src/: lib.rs
wayfinder-crate/src/enums/: grid.rs  hexagonal_shapes.rs  mod.rs  wall_direction.rs  wall_door_state.rs  wall_door_type.rs  wall_movement_type.rs  wall_sense_type.rs
wayfinder-crate/src/exports/: image.rs  mod.rs  token_shape.rs  walls.rs  wayfinder.rs
wayfinder-crate/src/grids/: gridless_grid.rs  hexagonal_grid.rs  square_grid.rs
wayfinder-crate/src/modules/: geometry.rs
wayfinder-crate/src/nodes/: gridless_node.rs  hexagonal_node.rs  square_node.rs
wayfinder-crate/src/traits/: astar.rs  base_grid.rs  js_deserialize.rs  js_helper.rs  js_serialize.rs  math.rs  mod.rs  node.rs
wayfinder-crate/src/types/: circle.rs  gl_texture.rs  line_intersection.rs  mod.rs  pixel.rs  point.rs  quadtree.rs  rectangle.rs  wall.rs
