[package]
name = "wayfinder"
edition = "2021"
authors = ["7H3LaughingMan"]
license = "MIT"

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]
path = "rs/lib.rs"

[dependencies]
by_address = "1.2.1"
clipper2 = "0.5.3"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
js-sys = "0.3.77"
pathfinding = "4.14.0"
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.76", features = [
    "console",
    "WebGlTexture",
    "WebGl2RenderingContext",
    "WebGlFramebuffer",
] }
