[package]
name = "wayfinder-crate"
edition = "2021"
authors = ["7H3LaughingMan"]
license = "MIT"

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]

[dependencies]
bimap = "0.6.3"
by_address = "1.2.1"
bytemuck = { version = "1.20.0", features = ["derive", "extern_crate_alloc"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.76"
pathfinding = "4.12.0"
wasm-bindgen = { version = "0.2.97" }
web-sys = { version = "0.3.76", features = [
    "console",
    "WebGlTexture",
    "WebGl2RenderingContext",
    "WebGlFramebuffer",
] }
